# emulator-cloud-saves

./: .gitignore  README.md  usage.md
ecs/backend/src/server/: auth.go  handlers.go  middleware.go  server.go
ecs/backend/src/storage/: storage.go
ecs/protocol/: openapi.yaml  protocol.md
ecs/sdk/: CMakeLists.txt
ecs/sdk/include/: network.hpp
ecs/sdk/src/: save_io.cpp
include/: cloud_interface.hpp  save_io.hpp
src/: cloud_interface.cpp  network.cpp
